--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello Abdelwahab!</h1>
+    <label for="">Enter Your Age:</label>
+    <br>
+    <input type="number" id="Age"/>
+    <button  id="sub">Submit</button>
     <script src="index.js"></script>
+    <script src="UserInput.Js"></script>
+
 </body>
 </html>
