--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <br>
     <input type="number" id="Age"/>
     <button  id="sub">Submit</button>
-    <script src="index.js"></script>
-    <script src="UserInput.Js"></script>
+    
+    <script src="TypeConversion.js"></script>
 
 </body>
 </html>
