--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="number" id="Age"/>
     <button  id="sub">Submit</button>
     
-    <script src="Objects.js"></script>
+    <script src="Arrays.Js"></script>
 
 </body>
 </html>
