--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Abdelwahab!</h1>
+    <h1 id="Rectangle"></h1>
     <label for="">Enter Your Age:</label>
     <br>
     <input type="number" id="Age"/>
     <button  id="sub">Submit</button>
     
-    <script src="Conditions.js"></script>
+    <script src="Loops.js"></script>
 
 </body>
 </html>
