--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="number" id="Age"/>
     <button  id="sub">Submit</button>
     
-    <script src="foreach-map.js"></script>
+    <script src="Filter-Reduce.js"></script>
 
 </body>
 </html>
