--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="number" id="Age"/>
     <button  id="sub">Submit</button>
     
-    <script src="Callback.js"></script>
+    <script src="NestedFunction.js"></script>
 
 </body>
 </html>
