--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="number" id="Age"/>
     <button  id="sub">Submit</button>
     
-    <script src="Classes.js"></script>
+    <script src="Inheritance-Overriding.js"></script>
 
 </body>
 </html>
